// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should be linkable 1`] = `
<a
  className="card is-card-link"
  href="/test"
>
  <Component
    className="card__link-indicator"
    icon="chevron-right"
  />
  This is a linked card
</a>
`;

exports[`Card should have \`card\` class 1`] = `
<div
  className="card"
/>
`;

exports[`Card should have custom class of \`test__ace\` 1`] = `
<div
  className="card test__ace"
/>
`;

exports[`Card should render children 1`] = `
<div
  className="card"
>
  This is a card
</div>
`;

exports[`CompactCard should have \`is-compact\` class 1`] = `
<Card
  className="is-compact"
  highlight={false}
  tagName="div"
/>
`;

exports[`CompactCard should have custom class of \`test__ace\` 1`] = `
<Card
  className="test__ace is-compact"
  highlight={false}
  tagName="div"
/>
`;

exports[`CompactCard should render children 1`] = `
<Card
  className="is-compact"
  highlight={false}
  tagName="div"
>
  This is a compact card
</Card>
`;

exports[`CompactCard should use the card component 1`] = `
<Card
  className="is-compact"
  highlight={false}
  tagName="div"
/>
`;
